--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -14,6 +14,12 @@ body {
 .selected-nav {
   @apply before:h-2 before:w-full before:bg-primary-second before:content-[''] before:absolute  before:top-12 text-primary-second;
 }
+.card {
+  @apply flex items-center justify-center w-5 p-1 text-sm rounded-sm h-7;
+}
+.card-small {
+  @apply flex items-center justify-center w-3 p-1 text-sm rounded-sm h-5;
+}
 .place-center {
   @apply justify-center items-center
 }
@@ -21,3 +27,6 @@ body {
 .selection\:text-primary-white ::selection {
   color :#defe54 !important
 }
+
+
+
