--- a/app/styles/loader.css
+++ b/app/styles/loader.css
@@ -20,7 +20,7 @@
       animation: 1s spin linear infinite;
     }
     .loader:after {
-      color: #defe54;
+      color: #FD3546;
       transform: rotateY(70deg);
       animation-delay: .4s;
     }
